# statsbomb_football_embeddings

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_validation_integration.py
embedder/: match_events_parser.py
examples/: validation_demo.py
test_tokenizer/end_to_end/: test_tokenizer.py
test_tokenizer/integration/: __init__.py  test_event_parsers.py  test_shot_events.py
test_tokenizer/unit/: test_feature_parsers.py  test_main_config.py
tokenizer/: __init__.py  config.py  event_parser.py  event_parsers.py  feature_parsers.py  match_events_parser.py  match_parser.py  tokenizer.py
tokenizer/scripts/: __init__.py  export_all_matches.py
tokenizer/utils/: __init__.py  helper_functions.py
tokenizer/validation/: __init__.py  report.py  validator.py
