[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statsbomb-football-tokenizer"
version = "0.1.0"
description = "A tokenizer for StatsBomb football event data, converting raw match events into ML-ready feature vectors"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Amit Ben-Tzvi", email = "amit-ben@campus.technion.ac.il"},
    {name = "Ilan Zendel", email = "ilan.zendel@campus.technion.ac.il"}
]
maintainers = [
    {name = "Amit Ben-Tzvi", email = "amit-ben@campus.technion.ac.il"},
    {name = "Ilan Zendel", email = "ilan.zendel@campus.technion.ac.il"}
]
keywords = [
    "football",
    "soccer",
    "statsbomb",
    "tokenizer",
    "sports-analytics",
    "machine-learning",
    "feature-engineering",
    "event-data",
    "data-processing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "parameterized>=0.9.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.18.0",
]
all = [
    "statsbomb-football-tokenizer[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/Amit-bt-technion/statsbomb_football_embeddings"
Documentation = "https://github.com/Amit-bt-technion/statsbomb_football_embeddings#readme"
Repository = "https://github.com/Amit-bt-technion/statsbomb_football_embeddings"
"Bug Tracker" = "https://github.com/Amit-bt-technion/statsbomb_football_embeddings/issues"

[project.scripts]
tokenizer = "main:main"
tokenizer-export = "tokenizer.scripts.export_all_matches:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tokenizer*"]
exclude = ["test_tokenizer*", "docs*"]

[tool.setuptools.package-data]
tokenizer = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | events_csv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["events_csv/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "tqdm.*",
    "parameterized.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--cov=tokenizer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["test_tokenizer"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["tokenizer"]
omit = [
    "*/test_tokenizer/*",
    "*/__pycache__/*",
    "*/events_csv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "events_csv",
    ".eggs",
    "*.egg",
]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.pylint.messages_control]
disable = [
    "C0330",
    "C0326",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
]

[tool.pylint.format]
max-line-length = 100

[tool.bandit]
exclude_dirs = ["test_tokenizer"]
skips = ["B101", "B601"]

